<resources>
    <string name="app_name">EdMatic</string>
    <string name="app_tag">Connecting students across various institutions</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_twitter">Sign in with Twitter</string>
    <string name="signup_prompt">Don’t have an account yet? Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_google">Sign up with Google</string>
    <string name="sign_up_twitter">Sign up with Twitter</string>
    <string name="signin_prompt">Already a member? Sign in</string>
    <string name="detail">Personal Details</string>
    <string name="detail_desc">We need some personal information to setup your account</string>
    <string name="input_first_name">Enter first name</string>
    <string name="input_last_name">Enter last name</string>
    <string name="input_gender">Select gender</string>
    <string name="input_dob">Enter date of birth eg. yyyy-mm-dd</string>
    <string name="input_grade">Select grade</string>
    <string name="input_level">Select level</string>
    <string name="input_institution">Enter institution name</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="grade">
        <item>Junior Secondary</item>
        <item>Senior Secondary</item>
        <item>Diploma</item>
        <item>University</item>
    </string-array>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_team">Team</string>
    <string name="title_account">Account</string>
    <string name="title_competitions">Competitions</string>
    <string name="upcoming">Upcoming competitions</string>
    <string name="title_activities">Activities</string>
    <string name="input_search">Search teams by name, tags</string>
    <string name="team_member_count">No of team members</string>
    <string name="answer">Answer</string>
    <string name="title_logout">Sign Out</string>
    <string name="input_team_name">Enter team name</string>
    <string name="input_team_desc">Enter team description</string>
    <string name="input_team_fields">Enter comma separated fields eg. Physics, Science, Economics, Maths</string>
</resources>
