<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hackmatic.edmatic.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_team"
        android:name="com.hackmatic.edmatic.ui.team.TeamFragment"
        android:label="@string/title_team"
        tools:layout="@layout/fragment_team" />

    <fragment
        android:id="@+id/navigation_competitions"
        android:name="com.hackmatic.edmatic.ui.competitions.CompetitionsFragment"
        android:label="@string/title_competitions"
        tools:layout="@layout/fragment_competitions" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.hackmatic.edmatic.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>